producer generates tasks to appropriate queues in RR fashion. Added print functionality

--- a/Assign3/Makefile
+++ b/Assign3/Makefile
@@ -1,10 +1,13 @@
 all: master
 
-master: master.o
-	gcc -o master master.o
+master: master.o utility.o
+	gcc -pthread -o master master.o utility.o
 
-master.o: master.c common_structs.h
+master.o: master.c utility.h common_structs.h
 	gcc -pthread -c master.c
+
+utility.o: utility.c utility.h common_structs.h
+	gcc -c utility.c
 
 clean:
 	rm *.o master
